# hextools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  publish-pypi.yml
docs/: conf.py
germ/: caproto_ioc.py  ophyd.py
src/hextools/: handlers.py  motors.py  utils.py
src/hextools/detectors/: __init__.py  germ.py  phantom.py
src/hextools/germ/: __init__.py  caproto_ioc.py  export.py  ophyd.py
tests/: conftest.py  test_germ.py
tests/detectors/: test_phantom.py
