[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "hextools"
authors = [
  { name = "Brookhaven National Laboratory", email = "jwlodek@bnl.gov" },
]
description = "Tools for NSLS-II HEX beamline"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "ophyd-async[ca, pva]>=0.17a2",
  "ophyd>=1.10.7",
]

[project.optional-dependencies]
iocs = [
  "caproto",
]
gui = [
#   "ntnda-qt-viewer",
]

[dependency-groups]
dev = [
    "ophyd-async[ca, pva, sim]>=0.17a2",
    "inflection",
    "import-linter",
    "numpydoc",
    "pickleshare",
    "pipdeptree",
    "pre-commit",
    "pyepics>=3.4.2",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-faulthandler",
    "pytest-forked",
    "pytest-insubprocess",
    "pytest-rerunfailures",
    "pytest-timeout",
    "ruff",
    "scanspec>=1.0a1",
    "types-mock",
    "types-pyyaml",
    "tiled[client,server]>=0.2.9",
    "bluesky-tiled-plugins>=2.0.2",
    "h5py>=3.16.0",
]
docs = [
    "pydata-sphinx-theme>=0.12",
    "myst-parser",
    "sphinx-autobuild",
    "sphinx-autodoc2",
    "sphinxcontrib-mermaid",
    "sphinx-copybutton",
    "sphinx-design",
]

[project.urls]
Homepage = "https://github.com/NSLS-II-HEX/hextools"
Issues = "https://github.com/NSLS-II-HEX/hextools/issues"
Discussions = "https://github.com/NSLS-II-HEX/hextools/discussions"
Changelog = "https://github.com/NSLS-II-HEX/hextools/releases"

[tool.setuptools_scm]
write_to = "src/hextools/_version.py"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = false  # Ignore missing stubs in imported modules


[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --strict-markers --doctest-modules
    --doctest-glob="*.rst" --doctest-glob="*.md"
    --ignore=docs/examples
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = ["error"]
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
log_format = "%(asctime)s,%(msecs)03d %(levelname)s (%(threadName)s) %(message)s"
log_date_format = "%H:%M:%S"

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 60

[tool.coverage.run]
patch = ["subprocess"]
data_file = "/tmp/hextools.coverage"
# branch = true

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

[tool.tox]
skipsdist = true
# envs to runs automatically with tox -p
env_list = ["pre-commit", "type-checking", "tests", "docs"]

[tool.tox.env_run_base]
# Pass all environment variables to the test environments
passenv = ["*"]
# Allow binaries from the base env to be run
allowlist_externals = [
    "pytest",
    "pre-commit",
    "sphinx-build",
    "sphinx-autobuild",
    "pyright",
]

[tool.tox.env.pre-commit]
description = "Run pre-commit on all files"
commands = [
    [
        "pre-commit",
        "run",
        "--all-files",
        "--show-diff-on-failure",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.type-checking]
description = "Run pyright"
commands = [
    [
        "pyright",
        "src",
        "--pythonpath",
        "{env:VIRTUAL_ENV}/bin/python",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.tests]
description = "Run tests with coverage"
commands = [
    [
        "pytest",
        "--cov=src/hextools",
        "--cov-report",
        "term",
        "--cov-report",
        "xml:cov.xml",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.docs]
description = "Run docs build with clean environment"
commands = [
    [
        "sphinx-build",
        "--fresh-env",
        "--show-traceback",
        "--fail-on-warning",
        "--keep-going",
        "docs",
        "build/html",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.tox.env.docs-autobuild]
description = "Run docs with autobuild on change"
commands = [
    [
        "sphinx-autobuild",
        "--show-traceback",
        "--watch",
        "README.md",
        "docs",
        "build/html",
        { replace = "posargs", default = [
        ], extend = true },
    ],
]

[tool.ruff]
line-length = 88
lint.select = [
    "B",       # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",      # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",       # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",       # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "N",       # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "W",       # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",       # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP",      # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "SLF",     # self - https://docs.astral.sh/ruff/settings/#lintflake8-self
    "PLC2701", # private import - https://docs.astral.sh/ruff/rules/import-private-name/
    "LOG015",  # root logger call - https://docs.astral.sh/ruff/rules/root-logger-call/
    "S101",    # assert - https://docs.astral.sh/ruff/rules/assert/
    "D",       # docstring - https://docs.astral.sh/ruff/rules/#pydocstyle-d
]
lint.ignore = [
    "B901", # Return in a generator is needed for plans
    "D107", # We squash __init__ docstrings into the class docstring
    "D102", # We don't need to override docstrings that are inherited from abstract methods
]
lint.preview = true # so that preview mode PLC2701 is enabled

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# By default, private member access is allowed in tests
# See https://github.com/DiamondLightSource/python-copier-template/issues/154
# Remove this line to forbid private member access in tests
"tests/**/*" = ["SLF001", "S101", "D"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
# We often shorten "Annotated" to "A" for brevity
"typing.Annotated" = "A"

[tool.ruff.lint.pep8-naming]
# The fixture RE is commonly used in tests
extend-ignore-names = ["RE"]

[tool.importlinter]
root_package = "hextools"

[tool.uv.sources]
ntnda-qt-viewer = { git = "https://github.com/jwlodek/ntnda-qt-viewer" }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "*"

[tool.pixi.pypi-dependencies]
hextools = { path = ".", editable = true }

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
gui = { features = ["gui"], solve-group = "default" }
iocs = { features = ["iocs"], solve-group = "default" }
py311 = { features = ["dev", "py311"], solve-group = "py311" }
py312 = { features = ["dev", "py312"], solve-group = "py312" }
py313 = { features = ["dev", "py313"], solve-group = "py313" }
py314 = { features = ["dev", "py314"], solve-group = "py314" }

[tool.pixi.feature.py313.tasks]
test = "pytest --cov=src/hextools --cov-report=term --cov-report=xml:coverage.xml"
lint = "pre-commit run --all-files"
type-check = "pyright src tests"
